# kismesis-ssg

./: .gitmodules  Cargo.toml  LICENSE.md  readme.md
.github/workflows/: rust.yml
examples/basic_site/: .kismet
examples/basic_site/input/: index.ks
examples/basic_site/output/: index.html
examples/basic_site/templates/: main.ks
examples/macros/input/: index.ks
examples/macros/output/: index.html
examples/macros/templates/: main.ks
src/: compile.rs  main.rs  server.rs
src/.helix/: languages.toml
test/: attr_test.ks  attr_test2.ks  main.ks
test/example/input/: index.ks
test/example/output/: index.html
test/example/templates/: main.ks
test/example2/input/: index.ks
test/example2/templates/: main.ks
test/input/: helloworld.rhai  test.ks  test.xml
test/output/: test.html
test/templates/: main.ks
