[package]
name = "kismesis-ssg"
version = "0.3.0"
edition = "2021"
description = "A static site generator with plugins and macros."
license-file = "LICENSE.md"
repository = "https://github.com/lilith-in-starlight/kismesis-ssg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kismesis"
path = "src/main.rs"

[dependencies]
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.8.0", optional = true }
clap = { version = "4.4.16", features = ["derive"] }
directories = "5.0.1"
kismesis = { version="0.4.0" , features = ["reporting", "serde"]}
once_cell = "1.19.0"
ron = "0.8.1"

[features]
default=["plugins", "server"]
plugins=["kismesis/plugins"]
server=["dep:actix-web", "dep:actix-files"]
